--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     }
   },
   "dependencies": {
+    "@popperjs/core": "^2.10.1",
     "bootstrap": "^5.1.1",
     "electron-squirrel-startup": "^1.0.0",
     "jquery": "^3.6.0",
