--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.10.1",
+    "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "electron-squirrel-startup": "^1.0.0",
     "jquery": "^3.6.0",
