--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "nodejs-file-downloader": "^4.7.3",
     "numeral": "^2.0.6",
     "popper": "^1.0.1",
-    "slug": "^5.1.0"
+    "slug": "^5.1.0",
+    "tippy.js": "^6.3.1"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.61",
