--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Downloader for stems at ccmixter.org",
   "main": "src/index.js",
   "scripts": {
-    "start": "electron-forge start",
+    "start": "set NODE_OPTIONS=--max-http-header-size=16384 && electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "make-mac": "electron-forge make --platform darwin",
