--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@popperjs/core": "^2.10.1",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
+    "decompress-zip": "^0.3.3",
     "electron-squirrel-startup": "^1.0.0",
     "jquery": "^3.6.0",
     "node-fetch": "^3.0.0",
